force-app/main/default/objects/Big_Object_Field_Configuration__c/Big_Object_Field_Configuration__c.object-meta.xml
<CustomObject>
    <label>Big Object Field Configuration</label>
    <nameField>
        <displayFormat>BOFC-{00000}</displayFormat>
        <label>Configuration Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Big Object Field Configurations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>