force-app/main/default/objects/Big_Object_Field_Configuration__c/fields/Big_Object_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Big_Object_Configuration__c</fullName>
    <label>Big Object Configuration</label>
    <referenceTo>Big_Object_Configuration__c</referenceTo>
    <relationshipLabel>Big Object Field Configurations</relationshipLabel>
    <relationshipName>Big_Object_Field_Configurations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>