force-app/main/default/objects/Big_Object_Field_Configuration__c/fields/Big_Object_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Big_Object_Field_Name__c</fullName>
    <label>Big Object Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>