force-app/main/default/objects/Big_Object_Field_Configuration__c/fields/Indexed__c.field-meta.xml
<CustomField>
    <fullName>Indexed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Indexed</label>
    <type>Checkbox</type>
</CustomField>