force-app/main/default/objects/Big_Object_Field_Configuration__c/fields/Is_Ascending_Sort__c.field-meta.xml
<CustomField>
    <fullName>Is_Ascending_Sort__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>If field is indexed by default it is sorted ascending, uncheck to sort descending</inlineHelpText>
    <label>Is Ascending Sort</label>
    <type>Checkbox</type>
</CustomField>