force-app/main/default/objects/Big_Object_Field_Configuration__c/fields/Is_Standard_Field__c.field-meta.xml
<CustomField>
    <fullName>Is_Standard_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Standard Field</label>
    <type>Checkbox</type>
</CustomField>