force-app/main/default/objects/Big_Object_Field_Configuration__c/fields/Number_Field_Length__c.field-meta.xml
<CustomField>
    <fullName>Number_Field_Length__c</fullName>
    <label>Number Field Length</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>