force-app/main/default/objects/Big_Object_Field_Configuration__c/fields/Related_List_View__c.field-meta.xml
<CustomField>
    <fullName>Related_List_View__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enable to show this field and its value on related list</inlineHelpText>
    <label>Related List View</label>
    <type>Checkbox</type>
</CustomField>