force-app/main/default/objects/Big_Object_Field_Configuration__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <inlineHelpText>Defines field is created by system or user selected from source object</inlineHelpText>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>User Defined</fullName>
            </value>
            <value>
                <fullName>System Generated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>