force-app/main/default/objects/Big_Object_Field_Configuration__c/fields/Text_Field_Length__c.field-meta.xml
<CustomField>
    <fullName>Text_Field_Length__c</fullName>
    <label>Text Field Length</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>