force-app/main/default/objects/Big_Object_Field_Configuration__c/validationRules/Limit_index_fields_to_5.validationRule-meta.xml
<ValidationRule>
    <fullName>Limit_index_fields_to_5</fullName>
    <active>true</active>
    <errorConditionFormula>IF( Big_Object_Configuration__r.Total_Indexed_Fields__c &gt;5, true, false)</errorConditionFormula>
    <errorMessage>Index Fields Cannot be more then 5</errorMessage>
</ValidationRule>