force-app/main/default/objects/Big_Object_Field_Configuration__c/validationRules/Match_Source_Object_API_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Match_Source_Object_API_Name</fullName>
    <active>true</active>
    <errorConditionFormula>IF( Big_Object_Configuration__r.Source_Object_API_Name__c == Source_Object_API_Name__c , false,true)</errorConditionFormula>
    <errorDisplayField>Source_Object_API_Name__c</errorDisplayField>
    <errorMessage>Source Object API Name should be same as in object configuration record</errorMessage>
</ValidationRule>